# smoldb

./: .gitignore  .rusty-hook.toml  Cargo.toml  DEVELOPMENT.md  Dockerfile  LESSONS.md  README.md  ROADMAP.md  build.rs  docker-compose.yaml
.github/workflows/: docker-build.yaml  test-suite.yaml
benches/: read_write.rs  upsert.rs
smolbench/: Cargo.toml
smolbench/src/: apis.rs  args.rs  error.rs  main.rs  types.rs  utils.rs
src/: args.rs  channel_service.rs  consensus.rs  lib.rs  main.rs  types.rs
src/api/: cluster.rs  collection.rs  helpers.rs  mod.rs  points.rs  service.rs
src/api/grpc/: mod.rs  p2p_grpc_schema.rs  points_service.rs  raft_service.rs  simple_service.rs  smoldb.rs  smoldb_internal_grpc.rs  smoldb_p2p_grpc.rs
src/proto/: p2p_grpc.proto  root_api.proto
src/storage/: collection.rs  content_manager.rs  error.rs  mod.rs  replicas.rs  rocksdb.rs  segment.rs  shard.rs  shard_trait.rs  toc.rs
src/storage/replicas/: local_shard.rs  mod.rs  remote_shard.rs
tests/: smolbench.sh  unit.sh
tools/: setup_cluster.sh
tools/smolbench/: Cargo.toml
tools/smolbench/src/: apis.rs  args.rs  error.rs  main.rs  utils.rs
tools/smolbench/src/tests/: mod.rs  utils.rs
