[package]
name = "smoldb"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
clap = { version = "4.5.38", features = ["derive"] }
raft = "0.7.0"
rocksdb = { version = "0.23.0", default-features = false, optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = { version = "0.34.7", default-features = false }
slog = "2.7.0"
slog-stdlog = "4.1.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[features]
default = []
rocksdb = ["dep:rocksdb"]

[profile.bench]
debug = true

[[bench]]
name = "upsert"
harness = false
