[package]
name = "smoldb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Consensus:
raft = { version = "0.7.0", features = [
    "prost-codec",
], default-features = false }
prost-for-raft = { package = "prost", version = "=0.11.9" }

# server and serialization:
actix-web = "4.11.0"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tonic = "0.13.1"

# storage layer:
hashring = "0.3.6"
sled = { version = "0.34.7", default-features = false }

# cli, logging, runtime, and other utilities:
clap = { version = "4.5.38", features = ["derive"] }
prost = "0.13.5"
slog = "2.7.0"
slog-stdlog = "4.1.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
rand = "0.9.1"
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio", "html_reports"] }
rusty-hook = "0.11.2"

[features]
default = []

[profile.bench]
debug = true

[[bench]]
name = "read_write"
harness = false
